Xml library updated, Tag Urls added in Unit of base.xml.